--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
 			"resizeMode": "contain",
 			"backgroundColor": "#ffffff"
 		},
+
 		"ios": {
 			"supportsTablet": true
 		},
@@ -26,7 +27,7 @@
 			"output": "static",
 			"favicon": "./assets/favicon.png"
 		},
-		"plugins": ["expo-router"],
+		"plugins": ["expo-router", "expo-secure-store"],
 		"experiments": {
 			"typedRoutes": true
 		}
